modified:   .vscode/settings.json 	modified:   assets/1/1_entity_000_ATTACK_000.png 	modified:   assets/1/1_entity_000_ATTACK_001.png 	modified:   assets/1/1_entity_000_ATTACK_002.png 	modified:   assets/1/1_entity_000_ATTACK_003.png 	modified:   assets/1/1_entity_000_ATTACK_004.png 	modified:   assets/1/1_entity_000_ATTACK_005.png 	modified:   assets/1/1_entity_000_ATTACK_006.png 	modified:   assets/1/1_entity_000_RUN_000.png 	modified:   assets/1/1_entity_000_RUN_001.png 	modified:   assets/1/1_entity_000_RUN_002.png 	modified:   assets/1/1_entity_000_RUN_003.png 	modified:   assets/1/1_entity_000_RUN_004.png 	modified:   assets/1/1_entity_000_RUN_005.png 	modified:   assets/1/1_entity_000_RUN_006.png 	renamed:    assets/2/2_entity_000_IDLE_006.png -> assets/2/2_entity_000_IDLE_6.png 	modified:   assets/background.jpeg 	modified:   main.css 	modified:   main.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#0C2477",
-        "titleBar.activeBackground": "#1133A7",
-        "titleBar.activeForeground": "#FCFDFF"
+        "activityBar.background": "#5A0A37",
+        "titleBar.activeBackground": "#7E0F4C",
+        "titleBar.activeForeground": "#FFFCFD"
     }
 }
